--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,14 @@ name = "darwinian-evolver"
 version = "0.1.0"
 readme = "README.md"
 dependencies = [
-    "anthropic",
-    "numpy",
-    "google-genai",
-    "openai",
-    "pydantic",
-    "jinja2",
-    "func_timeout",
-    "fsspec",
+    "anthropic==0.77.0",
+    "numpy==2.4.2",
+    "google-genai==1.56.0",
+    "openai==2.16.0",
+    "pydantic==2.12.5",
+    "jinja2==3.1.6",
+    "func_timeout==4.3.5",
+    "fsspec==2026.1.0",
 ]
 requires-python = ">=3.11"
 
