added ruff linter

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,40 @@ dev = [
     "tqdm",
     "pandas",
     "pandas-stubs",
+    "ruff",
 ]
 test = [
     "pytest",
 ]
+
+[tool.ruff]
+line-length = 119
+exclude = [
+  "**/__mock_llm_responses__/**",
+  "**/__snapshots__/**",
+  "ansibles/**",
+  "auto_generated/**",
+  "computronium/**",
+  "contrib/**",
+  "crafty/**",
+  "**/quarantine/**",
+  "standalone/**",
+  "test_data/**",
+  "third_party/**",
+  "**/*.ipynb",
+  "wandb/**",
+]
+
+[tool.ruff.format]
+docstring-code-line-length = 119
+quote-style = "double"
+indent-style = "space"
+
+[tool.ruff.lint.isort]
+force-single-line = true
+case-sensitive = true
+order-by-type = false
+known-first-party = [
+    "darwinian_evolver",
+]
+no-lines-before = ["future"]
