fixed vet.yml to match existing implementation

--- a/.github/workflows/vet.yml
+++ b/.github/workflows/vet.yml
@@ -1,61 +1,43 @@
-name: Vet Code Review
+name: Vet
+
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
 
 on:
   pull_request:
-    branches: [main]
-    types: [opened, synchronize, reopened, edited]
+    types: [opened, edited, synchronize, reopened]
 
 jobs:
   vet:
-    name: Vet Code Review
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
-    # Only run on non-draft PRs
-    if: "!github.event.pull_request.draft"
-    permissions:
-      pull-requests: write  # Needed to post comments
-      contents: read
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Full history needed for git diff
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+          fetch-depth: 0
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
-      - name: Install Vet
-        run: pip install git+https://github.com/imbue-ai/vet.git
-
-      - name: Run Vet
+      - run: pip install git+https://github.com/imbue-ai/vet.git
+      - name: Run vet
+        if: github.event.pull_request.head.repo.full_name == github.repository
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VET_GOAL: |
-            PR Title: ${{ github.event.pull_request.title }}
+            ${{ github.event.pull_request.title }}
 
-            PR Description:
+            Additional context (not necessarily part of the goal):
             ${{ github.event.pull_request.body }}
         run: |
-          # Run Vet but don't fail CI if issues are found
-          vet --base-commit ${{ github.event.pull_request.base.sha }} || true
-
-      - name: Post Vet Results
-        if: always()
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const fs = require('fs');
-            let vetOutput = '';
-            try {
-              vetOutput = fs.readFileSync('vet_output.txt', 'utf8');
-            } catch (e) {
-              vetOutput = 'Vet completed with no issues found.';
-            }
-
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: `## 🔍 Vet Code Review Results\n\n${vetOutput}`
-            });
+          set +e
+          vet "$VET_GOAL" --quiet --base-commit "${{ github.event.pull_request.base.sha }}" > "$RUNNER_TEMP/vet-output.txt" 2>&1
+          status=$?
+          if [ ! -s "$RUNNER_TEMP/vet-output.txt" ]; then
+            echo "Vet found no issues." > "$RUNNER_TEMP/vet-output.txt"
+          fi
+          gh pr comment "${{ github.event.pull_request.number }}" --body-file "$RUNNER_TEMP/vet-output.txt"
+          if [ "$status" -eq 1 ]; then exit 0; fi
+          exit "$status"
